[package]
name = "wfc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.5", features = ["rgb"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
